# Ai_photo_editor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Config.md  PDR-implementation-status.md  PDR-tasks.md  PDR.md  README.md  pyproject.toml
app/: __init__.py
app/api/: routes.py
app/core/: config.py  container.py  rate_limit.py  security.py
app/domain/: errors.py  schemas.py
app/infra/: image_io.py  metadata_repo.py  storage.py
app/services/: artifact_detection.py  batch_scheduler.py  controlnet.py  dataset_prep.py  generation_agent.py  identity.py  inpainting.py  input_validation.py  ip_adapter.py  lora.py  lora_training.py  metrics.py  model_registry.py  orchestrator.py  prompt_adherence.py  safety.py  sdxl_generator.py  segmentation.py  torch_utils.py  training_pipeline.py  validators.py
app/workers/: celery_app.py  tasks.py
deploy/: Dockerfile  REMOTE_SERVER_GUIDE.md  docker-compose.gpu.yml  docker-compose.yml  env.docker.example
deploy/monitoring/: alert_rules.yml  alertmanager.yml  grafana-dashboard.json
deploy/nginx/: photo-editor-http.conf  photo-editor-https.conf
deploy/systemd/: photo-editor-api.service  photo-editor-worker.service
harness/: ab_regression_harness.py  generation_harness.py  identity_harness.py  kpi_harness.py  load_harness.py  perf_harness.py  quality_harness.py
tests/: conftest.py  test_generate_api.py  test_harness_extensions.py  test_identity.py  test_input_validation.py  test_prompt_adherence.py  test_quality_gates.py  test_real_models_smoke.py  test_training_pipeline.py
